[package]
name = "miyabi-agent-review"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi Review Agent - Code review, quality scoring, and security scanning"
keywords = ["agents", "ai", "review", "quality", "security"]
categories = ["development-tools", "web-programming"]

[dependencies]
miyabi-agent-core = { path = "../miyabi-agent-core", version = "0.1.2" }
miyabi-types = { path = "../miyabi-types", version = "0.1.2" }
miyabi-core = { path = "../miyabi-core", version = "0.1.2" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
regex = "1.10"

[dev-dependencies]
tempfile = "3.13"
