[package]
name = "miyabi-agent-swml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core Miyabi dependencies
miyabi-types = { path = "../miyabi-types", version = "0.1.2" }
# miyabi-core = { path = "../miyabi-core" }  # TODO: Enable when needed
# miyabi-llm = { path = "../miyabi-llm" }  # TODO: Enable for θ₁, θ₂
# miyabi-agent-core = { path = "../miyabi-agent-core" }  # TODO: Enable when needed

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Math/Statistics for convergence analysis
statrs = "0.18"

# Filesystem and hashing
walkdir = "2.5"
sha2 = "0.10"

# Git integration
git2 = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }

# TOML parsing
toml = "0.9"

[dev-dependencies]
tokio-test = "0.4"
