[package]
name = "miyabi-agent-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi Workflow Agents - PR, Issue, and Deployment automation"
keywords = ["agents", "ai", "github", "workflow", "cicd"]
categories = ["development-tools", "web-programming"]

[dependencies]
miyabi-agent-core = { path = "../miyabi-agent-core", version = "0.1.2" }
miyabi-types = { path = "../miyabi-types", version = "0.1.2" }
miyabi-core = { path = "../miyabi-core", version = "0.1.2" }
miyabi-github = { path = "../miyabi-github", version = "0.1.2" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
octocrab = { workspace = true }
reqwest = { workspace = true }
regex = "1.10"

[dev-dependencies]
tempfile = "3.13"
