[package]
name = "miyabi-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi Agents - Autonomous AI agents (DEPRECATED: Use miyabi-agent-* crates)"
keywords = ["agents", "ai", "automation", "github", "cicd"]
categories = ["development-tools", "web-programming"]
readme = "../README.md"

[dependencies]
# Core agent infrastructure
miyabi-agent-core = { path = "../miyabi-agent-core" }

# Specialized agent crates (re-exported for backward compatibility)
miyabi-agent-coordinator = { path = "../miyabi-agent-coordinator" }
miyabi-agent-codegen = { path = "../miyabi-agent-codegen" }
miyabi-agent-review = { path = "../miyabi-agent-review" }
miyabi-agent-workflow = { path = "../miyabi-agent-workflow" }
miyabi-agent-business = { path = "../miyabi-agent-business" }
miyabi-agent-integrations = { path = "../miyabi-agent-integrations" }

# Core types
miyabi-types = { path = "../miyabi-types" }

# LLM integration (for business agents)
miyabi-llm = { path = "../miyabi-llm", optional = true }

# Optional: Knowledge base integration
miyabi-knowledge = { path = "../miyabi-knowledge", optional = true }

# Async runtime & utilities
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
chrono = "0.4"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "0.9"
dirs = "6.0"

[features]
default = ["llm-integration"]
knowledge-integration = ["miyabi-knowledge"]
llm-integration = ["miyabi-llm"]

[dev-dependencies]
miyabi-core = { path = "../miyabi-core" }
tempfile = "3.13"
tracing-subscriber = "0.3"
