[package]
name = "miyabi-api-gateway"
version = "0.1.0"
edition = "2021"
description = "API Gateway for external task submission (ChatGPT, Claude, etc.)"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Auth (from miyabi-auth)
miyabi-auth = { path = "../miyabi-auth" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Queue/Async
tokio-stream = "0.1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for webhooks)
reqwest = { version = "0.11", features = ["json"] }
