[package]
name = "miyabi-approval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Miyabi Approval System - Human-in-the-Loop workflow approval gates"
keywords = ["approval", "workflow", "human-in-loop", "gates", "orchestration"]
categories = ["development-tools", "web-programming"]

[dependencies]
miyabi-core = { path = "../miyabi-core" }
miyabi-types = { path = "../miyabi-types" }
miyabi-workflow = { path = "../miyabi-workflow" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
sled = "0.34"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.13"
