[package]
name = "miyabi-auth"
version = "0.1.0"
edition = "2021"
description = "OAuth2 Authentication for Miyabi - Claude/ChatGPT Web Integration"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# OAuth2
oauth2 = "4.4"

# JWT
jsonwebtoken = "9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
dotenvy = "0.15"

# Crypto
argon2 = "0.5"
rand = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[features]
default = []
claude = []
openai = []
github = []
