[package]
name = "miyabi-aws-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# AWS SDK
aws-config = "1.5"
aws-sdk-ec2 = "1.190"
aws-sdk-s3 = "1.52"
aws-sdk-lambda = "1.105"
aws-sdk-rds = "1.49"
aws-sdk-dynamodb = "1.46"
aws-sdk-cloudformation = "1.47"
aws-sdk-sts = "1.44"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Miyabi crates
miyabi-types = { path = "../miyabi-types" }
miyabi-agent-core = { path = "../miyabi-agent-core" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
