[package]
name = "miyabi-business-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Web framework
axum = "0.7"

# Database ORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Decimal (for prices)
rust_decimal = { version = "1.36", features = ["serde"] }

# Miyabi crates
miyabi-types = { path = "../miyabi-types", version = "0.1.2" }
miyabi-agent-core = { path = "../miyabi-agent-core", version = "0.1.2" }
miyabi-llm = { path = "../miyabi-llm", version = "0.1.2" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
